fix(colors): Add missing colors

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,14 +39,6 @@ HR {
   box-shadow: inset 0 0 0 1px var(--border-default-grey),inset 0 -0.25rem 0 0 var(--structures-color) !important;
 }
 
-.bg-structures {
-  background-color: var(--structures-color) !important;
-}
-
-.bg-persons {
-  background-color: var(--persons-color) !important;
-}
-
 .bg-categories {
   background-color: var(--categories-color) !important;
 }
@@ -54,20 +46,40 @@ HR {
   background-color: rgba(230,254,218, 0.7) !important;
 }
 
+.bg-documents {
+  background-color: var(--documents-color) !important;
+}
+
+.bg-legal-categories {
+  background-color: var(--legal-categories-color) !important;
+}
+
+.bg-official-texts {
+  background-color: var(--official-texts-color) !important;
+}
+
+.bg-persons {
+  background-color: var(--persons-color) !important;
+}
+
 .bg-prices {
   background-color: var(--prices-color) !important;
 }
 
-.bg-documents {
-  background-color: var(--documents-color) !important;
+.bg-projects {
+  background-color: var(--projects-color) !important;
+}
+
+.bg-structures {
+  background-color: var(--structures-color) !important;
 }
 
 .bg-terms {
   background-color: var(--terms-color) !important;
 }
 
-.bg-textes-officiels {
-  background-color: var(--textes-officiels-color) !important;
+.bg-users {
+  background-color: var(--users-color) !important;
 }
 
 .bullet {
